--- a/yaapp/templates/mailtemplates/201206/index.html
+++ b/yaapp/templates/mailtemplates/201206/index.html
@@ -17,15 +17,15 @@ body {
 {{ link_site|safe }}
 <table width="550" border="0" align="center" cellpadding="0" cellspacing="0">
   <tr>
-    <td colspan="3"><a href="http://www.yasound.com"><img src="http://localhost:8000/media/newsletters/201206/top.jpg" alt="Yasound" width="550" height="95" border="0"></a></td>
+    <td colspan="3"><a href="http://www.yasound.com"><img src="https://yasound.com/media/newsletters/201206/top.jpg" alt="Yasound" width="550" height="95" border="0"></a></td>
   </tr>
   <tr>
-    <td width="1" bgcolor="#D8D8D8"><img src="http://localhost:8000/media/newsletters/201206/blank.gif" width="1" height="1"></td>
+    <td width="1" bgcolor="#D8D8D8"><img src="https://yasound.com/media/newsletters/201206/blank.gif" width="1" height="1"></td>
     <td width="548"><table width="548" border="0" cellspacing="0" cellpadding="0">
         <tr>
-          <td width="21"><img src="http://localhost:8000/media/newsletters/201206/blank.gif" width="21" height="1"></td>
-          <td width="506"><img src="http://localhost:8000/media/newsletters/201206/blank.gif" width="506" height="1"></td>
-          <td width="21"><img src="http://localhost:8000/media/newsletters/201206/blank.gif" width="21" height="1"></td>
+          <td width="21"><img src="https://yasound.com/media/newsletters/201206/blank.gif" width="21" height="1"></td>
+          <td width="506"><img src="https://yasound.com/media/newsletters/201206/blank.gif" width="506" height="1"></td>
+          <td width="21"><img src="https://yasound.com/media/newsletters/201206/blank.gif" width="21" height="1"></td>
         </tr>
         <tr>
           <td width="21" align="left" valign="top">&nbsp;</td>
@@ -48,14 +48,14 @@ body {
           <td width="506" align="left" valign="top"><p style="font-family:Arial, Helvetica, sans-serif; font-size:12px; color:#373737">&nbsp;<br>
             Chez Yasound, on sait déjà ce qu'on va faire cet été : bosser dur pour vous faire une magnifique V2 mobile et web qui sortira à la rentrée. En septembre, quand vous serez tous beaux , reposés et bronzés, nous, on aura le teint blafard et des cernes sous les yeux. Le pire, c'est qu'on aime ça. Oui on sait, on est des geeks mazos :)<br>
           Alors pour fêter cet été studieux pour nous (et festif pour vous, en tout cas c'est ce qu'on vous souhaite), on vous propose de gagner une station d'accueil pour iPhone au look très sympa.</p>
-          <p style="font-family:Arial, Helvetica, sans-serif; font-size:12px; color:#373737"><img src="http://localhost:8000/media/newsletters/201206/concours.jpg" width="505" height="207" alt="Montez le son"></p>
+          <p style="font-family:Arial, Helvetica, sans-serif; font-size:12px; color:#373737"><img src="https://yasound.com/media/newsletters/201206/concours.jpg" width="505" height="207" alt="Montez le son"></p>
           <p style="font-family:Arial, Helvetica, sans-serif; font-size:12px; color:#00b3ed; font-weight:bold"><span style="font-size:18px">1.</span> Pour cela, choisissez l'un des blogs partenaires suivants : <table width="505" border="0" cellspacing="0" cellpadding="0">
   <tr>
-    <td><a href="http://dueze.blogspot.fr/"><img src="http://localhost:8000/media/newsletters/201206/duezeblog.jpg" alt="Dueze Blog" width="83" height="87" border="0"></a></td>
-    <td><a href="http://wearethemascotte.fr/"><img src="http://localhost:8000/media/newsletters/201206/wearethemascote.jpg" alt="We ar the mascote" width="114" height="87" border="0"></a></td>
-    <td><a href="http://www.iphonophile.fr/"><img src="http://localhost:8000/media/newsletters/201206/iphonophile.jpg" alt="IPhonophile" width="85" height="87" border="0"></a></td>
-    <td><a href="http://infoidevice.fr/"><img src="http://localhost:8000/media/newsletters/201206/infoidevice.jpg" alt="Info Idevice" width="98" height="87" border="0"></a></td>
-    <td><a href="http://someareontheway.over-blog.com/"><img src="http://localhost:8000/media/newsletters/201206/someareintheway.jpg" alt="Some are in the way" width="123" height="87" border="0"></a></td>
+    <td><a href="http://dueze.blogspot.fr/"><img src="https://yasound.com/media/newsletters/201206/duezeblog.jpg" alt="Dueze Blog" width="83" height="87" border="0"></a></td>
+    <td><a href="http://wearethemascotte.fr/"><img src="https://yasound.com/media/newsletters/201206/wearethemascote.jpg" alt="We ar the mascote" width="114" height="87" border="0"></a></td>
+    <td><a href="http://www.iphonophile.fr/"><img src="https://yasound.com/media/newsletters/201206/iphonophile.jpg" alt="IPhonophile" width="85" height="87" border="0"></a></td>
+    <td><a href="http://infoidevice.fr/"><img src="https://yasound.com/media/newsletters/201206/infoidevice.jpg" alt="Info Idevice" width="98" height="87" border="0"></a></td>
+    <td><a href="http://someareontheway.over-blog.com/"><img src="https://yasound.com/media/newsletters/201206/someareintheway.jpg" alt="Some are in the way" width="123" height="87" border="0"></a></td>
   </tr>
 </table></p>
 <p style="font-family:Arial, Helvetica, sans-serif; font-size:12px; color:#00b3ed; font-weight:bold"><span style="font-size:18px">2.</span> Ecoutez la radio «NiNi$$ » présente dans la catégorie « Sélection » de l'application<br>et postez le message : </p>
@@ -77,7 +77,7 @@ body {
             <p style="font-family:Arial, Helvetica, sans-serif; font-size:12px; color:#ef7b2b; font-weight:bold"><span style="font-size:18px">1.</span> Modération des messages</p>
             <table width="506" border="0" cellspacing="0" cellpadding="0">
               <tr>
-                <td><img src="http://localhost:8000/media/newsletters/201206/moderation.jpg" width="506" height="287" alt="Modération"></td>
+                <td><img src="https://yasound.com/media/newsletters/201206/moderation.jpg" width="506" height="287" alt="Modération"></td>
               </tr>
               <tr>
                 <td><table width="506" border="0" cellspacing="0" cellpadding="0">
@@ -99,7 +99,7 @@ body {
                   &nbsp;<br>
                   2.</span> Plus d'infos sur les titres. </p>
                 <p style="font-family:Arial, Helvetica, sans-serif; font-size:12px; color:#373737">Désormais, chaque titre diffusé renvoie à une page de renseignements. Ainsi, lorsque vous cliquez sur la pochette du morceau en écoute voici ce qu'il se passe. </p></td>
-                <td valign="top"><img src="http://localhost:8000/media/newsletters/201206/renseignement.jpg" width="300" height="331" alt="Renseignements"></td>
+                <td valign="top"><img src="https://yasound.com/media/newsletters/201206/renseignement.jpg" width="300" height="331" alt="Renseignements"></td>
               </tr>
             </table>
 <p style="font-family:Arial, Helvetica, sans-serif; font-size:12px; color:#ef7b2b; font-weight:bold">&nbsp;</p></td>
@@ -119,40 +119,40 @@ body {
                     <br>
               <table width="332" border="0" cellspacing="0" cellpadding="0">
                   <tr>
-                    <td width="142" valign="top"><img src="http://localhost:8000/media/newsletters/201206/marseillerockisland.jpg" width="142" height="158" alt="Marseille rock island"></td>
+                    <td width="142" valign="top"><img src="https://yasound.com/media/newsletters/201206/marseillerockisland.jpg" width="142" height="158" alt="Marseille rock island"></td>
                     <td width="190" valign="top"><p style="margin:0px; font-family:Arial, Helvetica, sans-serif; font-size:12px; color:#373737">En vue des rattrapages du bac, la 1ère édition du <strong>Marseille Rock Island</strong> vous fera réviser vos bases en matière de scène électro - pop actuelle grâce à Digitalism, Cassius et cie. Prévoyez d'être convoqué au fort d'Entrecasteaux entre le 28 juin et le 1er juillet !   Renseignements et programme : <a href="http://www.marseille-rockisland.fr" style="color:#373737">www.marseille-rockisland.fr</a><br>
-                <a href="http://w1p.fr/58864"><img src="http://localhost:8000/media/newsletters/201206/radio.jpg" alt="Découvrez la radio" width="143" height="32" border="0"></a></p></td>
+                <a href="http://w1p.fr/58864"><img src="https://yasound.com/media/newsletters/201206/radio.jpg" alt="Découvrez la radio" width="143" height="32" border="0"></a></p></td>
                   </tr>
                 </table><br>
                 <table width="332" border="0" cellspacing="0" cellpadding="0">
                   <tr>
                     <td width="190" valign="top"><p style="margin:0px; font-family:Arial, Helvetica, sans-serif; font-size:12px; color:#373737">Snnnooooooooooppppp ! Son unique concert de l'été en France, il le donne au <strong>Free Music Festival</strong>, les 29 et 30 juin au lac de Montendre (La Rochelle). Pour sa 12e édition, ce festival a prévu une programmation bien sympa et pour tous les goûts allant de Joey Star à Thomas Fersen en passant par The Shoes.  Renseignements et programme : <a href="http://www.freemusic-festival.com" style="color:#373737">www.freemusic-festival.com </a><br>
-                <a href="http://w1p.fr/59207"><img src="http://localhost:8000/media/newsletters/201206/radio.jpg" alt="Découvrez la radio" width="143" height="32" border="0"></a></p></td>
-                    <td width="142" valign="top"><img src="http://localhost:8000/media/newsletters/201206/freemusic.jpg" width="142" height="128" alt="Festival Free Music"></td>
+                <a href="http://w1p.fr/59207"><img src="https://yasound.com/media/newsletters/201206/radio.jpg" alt="Découvrez la radio" width="143" height="32" border="0"></a></p></td>
+                    <td width="142" valign="top"><img src="https://yasound.com/media/newsletters/201206/freemusic.jpg" width="142" height="128" alt="Festival Free Music"></td>
                     
                   </tr>
                 </table><br>
                 <table width="332" border="0" cellspacing="0" cellpadding="0">
                   <tr>
-                    <td width="142" valign="top"><img src="http://localhost:8000/media/newsletters/201206/allstars.jpg" width="142" height="175" alt="All stars festival"></td>
+                    <td width="142" valign="top"><img src="https://yasound.com/media/newsletters/201206/allstars.jpg" width="142" height="175" alt="All stars festival"></td>
                     <td width="190" valign="top"><p style="margin:0px; font-family:Arial, Helvetica, sans-serif; font-size:12px; color:#373737">Adoptez un look jazzy pour le mois de juillet ! Le New Morning organise son <strong>All Stars Festival</strong> pour vous faire profiter de pépites telles que John Scofield's ou encore Lucky Petterson accompagné de son Blues band. Renseignements et programme : <a href="http://www.newmorning.com" style="color:#373737">www.newmorning.com</a><br>
-                <a href="http://w1p.fr/61969"><img src="http://localhost:8000/media/newsletters/201206/radio.jpg" alt="Découvrez la radio" width="143" height="32" border="0"></a></p></td>
+                <a href="http://w1p.fr/61969"><img src="https://yasound.com/media/newsletters/201206/radio.jpg" alt="Découvrez la radio" width="143" height="32" border="0"></a></p></td>
                   </tr>
                 </table>
               </p>
                 <p style="font-family:Arial, Helvetica, sans-serif; font-size:12px; color:#373737">&nbsp; </p></td>
               <td width="30" valign="top">&nbsp;</td>
-              <td width="144" valign="top"><p><img src="http://localhost:8000/media/newsletters/201206/glazart.jpg" width="144" height="200" alt="Glazart"></p>
+              <td width="144" valign="top"><p><img src="https://yasound.com/media/newsletters/201206/glazart.jpg" width="144" height="200" alt="Glazart"></p>
                 <p style="font-family:Arial, Helvetica, sans-serif; font-size:12px; color:#373737"><span style="font-family:Arial, Helvetica, sans-serif; font-size:12px; color:#ef7b2b; font-weight:bold">Salle de concert</span><br>
                   Envie d'aller creuser du côté des musiques alternatives ? Rendez vous sur la radio du Glazart, ce lieu dédié aux tendances underground partagera toutes ses trouvailles musicales pour vous permettre de briller en société ! <br>
                 Renseignements et programme : <a href="http://www.glazart.com" style="color:#373737">www.glazart.com</a><br>
-                <a href="http://w1p.fr/62124"><img src="http://localhost:8000/media/newsletters/201206/radio.jpg" alt="Découvrez la radio" width="143" height="32" border="0"></a></p></td>
+                <a href="http://w1p.fr/62124"><img src="https://yasound.com/media/newsletters/201206/radio.jpg" alt="Découvrez la radio" width="143" height="32" border="0"></a></p></td>
             </tr>
           </table></td>
           <td width="21" align="left" valign="top">&nbsp;</td>
         </tr>
       </table></td>
-    <td width="1" bgcolor="#D8D8D8"><img src="http://localhost:8000/media/newsletters/201206/blank.gif" width="1" height="1"></td>
+    <td width="1" bgcolor="#D8D8D8"><img src="https://yasound.com/media/newsletters/201206/blank.gif" width="1" height="1"></td>
   </tr>
   <tr>
     <td colspan="3" bgcolor="#D8D8D8"><p style="font-family:Arial, Helvetica, sans-serif; font-size:10px; color:#633a27; text-align:center"><span style="font-size:18px">Yasound</span><br>
@@ -162,7 +162,7 @@ body {
       veuillez prendre un moment pour ajouter <a href="mailto:noreply@yasound.com" style="color:#633a27">noreply@yasound.com</a> à votre carnet d'adresses</p></td>
   </tr>
   <tr>
-    <td colspan="3"><img src="http://localhost:8000/media/newsletters/201206/footer.jpg" width="550" height="12"></td>
+    <td colspan="3"><img src="https://yasound.com/media/newsletters/201206/footer.jpg" width="550" height="12"></td>
   </tr>
 </table>
 </body>
