--- a/yaapp/templates/newsletter/newsletter_link_site.html
+++ b/yaapp/templates/newsletter/newsletter_link_site.html
@@ -2,7 +2,7 @@
 <div id="links">
   <a name="links"></a>
   <p>
-    {% trans "If you cannot see this email," %}
-    <a href="http://{{ domain }}{% url newsletter_newsletter_contact slug=newsletter.slug,uidb36=uidb36,token=token %}">{% trans "click here" %}</a>.
+    Si vous ne pouvez voir cet e-mail, 
+    <a href="http://{{ domain }}{% url newsletter_newsletter_contact slug=newsletter.slug,uidb36=uidb36,token=token %}">cliquez ici</a>.
   </p>
 </div>
