--- a/yaapp/templates/yabase/widget.html
+++ b/yaapp/templates/yabase/widget.html
@@ -39,7 +39,7 @@
 <div class='container-fluid'>
     <div class='row-fluid'>
         <div class='span12'>
-            <a href='/' target='_blank'><img src='/media/images/logo.png' alt='Yasound logo'/></a>
+            <a href='{% url yabase.views.web_listen radio.uuid %}' target='_blank'><img src='/media/images/logo.png' alt='Yasound logo'/></a>
            <div id='widget-player'>
                <div id='track-picture' class='thumbnail'>
                    <img id='track-image' src="/media/images/default_image.png" width="120px" height="120px" alt='{% trans "Track logo" %}'/>
