--- a/yaapp/apps/yaweb/templates/yaweb/contest_station_terms.html
+++ b/yaapp/apps/yaweb/templates/yaweb/contest_station_terms.html
@@ -41,6 +41,10 @@
     
     <ul class='es-blogs'>
     <li><a href='http://dueze.blogspot.ca/2012/06/webjouez-avec-yasound-et-remportez-une_14.html#links' target='_blank'>Dueze Blog</a></li>
+    <li><a href='http://www.iphonophile.fr/concours-gagner-une-station-daccueil-iphone-ipod-avec-yasound/' target='_blank'>iPhonophile</a></li>
+    <li><a href='http://www.applepub.fr/blog/concours-jouez-et-gagnez-une-station-daccueil-avec-applepub-fr' target='_blank'>ApplePub</a></li>
+    <li><a href='http://infoidevice.fr/concours-gagnez-une-station-daccueil-pour-iphone-et-ipod-avec-yasound/' target='_blank'>Info iDevice</a></li>
+
     </ul> 
     
     </div>
