--- a/yaapp/templates/yabackoffice/keyfigures.html
+++ b/yaapp/templates/yabackoffice/keyfigures.html
@@ -174,6 +174,22 @@
             {{matched_songs_ratio}} % 
             </td>
         </tr>
+        <tr>
+            <td>
+                {% trans "Email addresses" %}
+            </td>
+            <td>
+            {{email_count}} 
+            </td>
+        </tr>
+        <tr>
+            <td>
+                {% trans "Newsletter subscribers" %}
+            </td>
+            <td>
+            {{newsletter_subscribers}} 
+            </td>
+        </tr>
     </tbody>
 </table>
 </div>
