june newsletter: updated data & layout

--- a/yaapp/templates/mailtemplates/201206/index.html
+++ b/yaapp/templates/mailtemplates/201206/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
@@ -14,7 +13,6 @@ body {
 </style>
 </head>
 <body>
-{{ link_site|safe }}
 <table width="550" border="0" align="center" cellpadding="0" cellspacing="0">
   <tr>
     <td colspan="3"><a href="http://www.yasound.com"><img src="https://yasound.com/media/newsletters/201206/top.jpg" alt="Yasound" width="550" height="95" border="0"></a></td>
@@ -29,11 +27,14 @@ body {
         </tr>
         <tr>
           <td width="21" align="left" valign="top">&nbsp;</td>
-          <td width="506" align="left" valign="top"><p style="font-family:Arial, Helvetica, sans-serif; font-size:12px; color:#373737"><span style="color:#ef7b2b; font-weight:bold; font-size:14px">&nbsp;<br>
+          <td width="506" align="left" valign="top"><p style="font-family:Arial, Helvetica, sans-serif; font-size:12px; color:#d8d8d8; font-weight:bold; text-align:right; margin-top:0px;">lundi 18 juin 2012</p><p style="font-family:Arial, Helvetica, sans-serif; font-size:12px; color:#373737"><span style="color:#ef7b2b; font-weight:bold; font-size:14px">
               Un grand merci</span><br>
+&nbsp;              <br>
               Depuis le lancement de Yasound, en moins de 3 mois, vous avez été plus de 20 000 à télécharger notre application, et vous avez créé 4 000 radios, ce qui fait de Yasound la première communauté de radio numérique en France. Merci !<br>
-              Cette newsletter a pour objet de vous tenir informé de l'actualité de Yasound. Au sommaire : un jeu concours avec une station d'accueil iPhone à gagner pour la fête de la musique, les nouvelles fonctionnalités à venir dans la prochaine mise à jour de l'appli et l'actu de nos partenaires festivals et salles de concert.</p>
-            <p style="font-family:Arial, Helvetica, sans-serif; font-size:12px; color:#373737">Musicalement,<br>
+&nbsp;              <br>
+              Cette newsletter a pour objet de vous tenir informé de l'actualité de Yasound. Au sommaire : un jeu concours avec une station d'accueil iPhone à gagner pour la fête de la musique, les nouvelles fonctionnalités à venir dans la prochaine mise à jour de l'appli et l'actu de nos partenaires festivals et salles de concert.<br>
+&nbsp;<br>              
+Musicalement,<br>
               Astrid, votre Community Manager<br>
               &nbsp; </p></td>
           <td width="21" align="left" valign="top">&nbsp;</td>
@@ -47,15 +48,15 @@ body {
           <td width="21" align="left" valign="top">&nbsp;</td>
           <td width="506" align="left" valign="top"><p style="font-family:Arial, Helvetica, sans-serif; font-size:12px; color:#373737">&nbsp;<br>
             Chez Yasound, on sait déjà ce qu'on va faire cet été : bosser dur pour vous faire une magnifique V2 mobile et web qui sortira à la rentrée. En septembre, quand vous serez tous beaux , reposés et bronzés, nous, on aura le teint blafard et des cernes sous les yeux. Le pire, c'est qu'on aime ça. Oui on sait, on est des geeks mazos :)<br>
-          Alors pour fêter cet été studieux pour nous (et festif pour vous, en tout cas c'est ce qu'on vous souhaite), on vous propose de gagner une station d'accueil pour iPhone au look très sympa.</p>
-          <p style="font-family:Arial, Helvetica, sans-serif; font-size:12px; color:#373737"><img src="https://yasound.com/media/newsletters/201206/concours.jpg" width="505" height="207" alt="Montez le son"></p>
+          Alors pour fêter cet été studieux pour nous (et festif pour vous, en tout cas c'est ce qu'on vous souhaite), on vous propose de gagner une station d'accueil pour iPhone au look très sympa.<br>
+&nbsp;<br>          
+<img src="https://yasound.com/media/newsletters/201206/concours.jpg" width="505" height="207" alt="Montez le son"></p>
           <p style="font-family:Arial, Helvetica, sans-serif; font-size:12px; color:#00b3ed; font-weight:bold"><span style="font-size:18px">1.</span> Pour cela, choisissez l'un des blogs partenaires suivants : <table width="505" border="0" cellspacing="0" cellpadding="0">
   <tr>
-    <td><a href="http://dueze.blogspot.fr/"><img src="https://yasound.com/media/newsletters/201206/duezeblog.jpg" alt="Dueze Blog" width="83" height="87" border="0"></a></td>
-    <td><a href="http://wearethemascotte.fr/"><img src="https://yasound.com/media/newsletters/201206/wearethemascote.jpg" alt="We ar the mascote" width="114" height="87" border="0"></a></td>
-    <td><a href="http://www.iphonophile.fr/"><img src="https://yasound.com/media/newsletters/201206/iphonophile.jpg" alt="IPhonophile" width="85" height="87" border="0"></a></td>
-    <td><a href="http://infoidevice.fr/"><img src="https://yasound.com/media/newsletters/201206/infoidevice.jpg" alt="Info Idevice" width="98" height="87" border="0"></a></td>
-    <td><a href="http://someareontheway.over-blog.com/"><img src="https://yasound.com/media/newsletters/201206/someareintheway.jpg" alt="Some are in the way" width="123" height="87" border="0"></a></td>
+    <td><a href="http://dueze.blogspot.ca/2012/06/webjouez-avec-yasound-et-remportez-une_14.html#links"><img src="https://yasound.com/media/newsletters/201206/duezeblog.jpg" alt="Dueze Blog" width="112" height="87" border="0"></a></td>
+    <td><a href="http://www.applepub.fr/blog/concours-jouez-et-gagnez-une-station-daccueil-avec-applepub-fr"><img src="https://yasound.com/media/newsletters/201206/applepub.jpg" alt="ApplePub" width="136" height="87" border="0"></a></td>
+    <td><a href="http://www.iphonophile.fr/concours-gagner-une-station-daccueil-iphone-ipod-avec-yasound/"><img src="https://yasound.com/media/newsletters/201206/iphonophile.jpg" alt="IPhonophile" width="115" height="87" border="0"></a></td>
+    <td><a href="http://infoidevice.fr/concours-gagnez-une-station-daccueil-pour-iphone-et-ipod-avec-yasound/?utm_source=rss&utm_medium=rss&utm_campaign=concours-gagnez-une-station-daccueil-pour-iphone-et-ipod-avec-http://infoidevice.fr/concours-gagnez-une-station-daccueil-pour-iphone-et-ipod-avec-yasound/"><img src="https://yasound.com/media/newsletters/201206/infoidevice.jpg" alt="Info Idevice" width="140" height="87" border="0"></a></td>
   </tr>
 </table></p>
 <p style="font-family:Arial, Helvetica, sans-serif; font-size:12px; color:#00b3ed; font-weight:bold"><span style="font-size:18px">2.</span> Ecoutez la radio «NiNi$$ » présente dans la catégorie « Sélection » de l'application<br>et postez le message : </p>
@@ -93,16 +94,32 @@ body {
                 </table></td>
               </tr>
             </table>
+        <p style="font-family:Arial, Helvetica, sans-serif; font-size:12px; color:#373737">
+                  &nbsp;<br>
+                  <span style="font-size:18px; font-weight:bold; color:#ef7b2b;">2.</span> <span style="font-size:12px; font-weight:bold; color:#ef7b2b;">Plus d'infos sur les titres.</span><br>
+                Désormais, chaque titre diffusé renvoie à une page de renseignements. Ainsi, lorsque vous cliquez sur la pochette du morceau en écoute voici ce qu'il se passe. </p>
             <table width="506" border="0" cellspacing="0" cellpadding="0">
               <tr>
-                <td valign="top"><p style="font-family:Arial, Helvetica, sans-serif; font-size:12px; color:#ef7b2b; font-weight:bold"><span style="font-size:18px">&nbsp;<br>
-                  &nbsp;<br>
-                  2.</span> Plus d'infos sur les titres. </p>
-                <p style="font-family:Arial, Helvetica, sans-serif; font-size:12px; color:#373737">Désormais, chaque titre diffusé renvoie à une page de renseignements. Ainsi, lorsque vous cliquez sur la pochette du morceau en écoute voici ce qu'il se passe. </p></td>
-                <td valign="top"><img src="https://yasound.com/media/newsletters/201206/renseignement.jpg" width="300" height="331" alt="Renseignements"></td>
+                <td><img src="https://yasound.com/media/newsletters/201206/renseignement.jpg" width="506" height="445" alt="Plus d'infos sur les titres"></td>
+              </tr>
+              <tr>
+                <td><table width="506" border="0" cellspacing="0" cellpadding="0">
+                  <tr>
+                    <td width="20" valign="top">&nbsp;</td>
+                    <td width="213" valign="top"><p style="font-family:Arial, Helvetica, sans-serif; font-size:12px; color:#373737"><strong>Sur votre radio : </strong><br>
+                      Si le morceau est en écoute sur votre radio, cela vous permet d'accéder directement à ses paramètres de programmation.  <br>
+                      <strong>Nouveauté :</strong> lorsqu'un morceau est incorrectement reconnu, vous pouvez le supprimer de la programmation et le remplacer par le vôtre depuis votre  bibliothèque iTunes. <br>
+                    </p></td>
+                    <td width="40" valign="top">&nbsp;</td>
+                    <td width="213" valign="top"><p style="font-family:Arial, Helvetica, sans-serif; font-size:12px; color:#373737"><strong>Sur une autre radio que la vôtre : </strong><br>
+                      Si le morceau est en écoute sur une autre radio que la vôtre, vous accédez aux informations du titre.<br>
+                    </p></td>
+                    <td width="20" valign="top">&nbsp;</td>
+                  </tr>
+                </table></td>
               </tr>
             </table>
-<p style="font-family:Arial, Helvetica, sans-serif; font-size:12px; color:#ef7b2b; font-weight:bold">&nbsp;</p></td>
+          <p style="font-family:Arial, Helvetica, sans-serif; font-size:12px; color:#ef7b2b; font-weight:bold">&nbsp;</p></td>
           <td width="21" align="left" valign="top">&nbsp;</td>
         </tr><tr>
           <td width="21" align="left" valign="top" bgcolor="#ef7b2b">&nbsp;</td>
@@ -126,7 +143,7 @@ body {
                 </table><br>
                 <table width="332" border="0" cellspacing="0" cellpadding="0">
                   <tr>
-                    <td width="190" valign="top"><p style="margin:0px; font-family:Arial, Helvetica, sans-serif; font-size:12px; color:#373737">Snnnooooooooooppppp ! Son unique concert de l'été en France, il le donne au <strong>Free Music Festival</strong>, les 29 et 30 juin au lac de Montendre (La Rochelle). Pour sa 12e édition, ce festival a prévu une programmation bien sympa et pour tous les goûts allant de Joey Star à Thomas Fersen en passant par The Shoes.  Renseignements et programme : <a href="http://www.freemusic-festival.com" style="color:#373737">www.freemusic-festival.com </a><br>
+                    <td width="190" valign="top"><p style="margin:0px; font-family:Arial, Helvetica, sans-serif; font-size:12px; color:#373737">Snnnooooooooooppppp ! Son unique concert de l'été en France, il le donne au <strong>Free Music Festival</strong>, les 29 et 30 juin au lac de Montendre (La Rochelle). Pour sa 12e édition, ce festival a prévu une programmation bien sympa et pour tous les goûts allant de Joey Starr à Thomas Fersen en passant par The Shoes.  Renseignements et programme : <a href="http://www.freemusic-festival.com" style="color:#373737">www.freemusic-festival.com </a><br>
                 <a href="http://w1p.fr/59207"><img src="https://yasound.com/media/newsletters/201206/radio.jpg" alt="Découvrez la radio" width="143" height="32" border="0"></a></p></td>
                     <td width="142" valign="top"><img src="https://yasound.com/media/newsletters/201206/freemusic.jpg" width="142" height="128" alt="Festival Free Music"></td>
                     
@@ -165,5 +182,6 @@ body {
     <td colspan="3"><img src="https://yasound.com/media/newsletters/201206/footer.jpg" width="550" height="12"></td>
   </tr>
 </table>
+{{ link_site|safe }}
 </body>
 </html>
