added better layout for image on iOS

--- a/yaapp/apps/yaweb/templates/yaweb/contest_station_iphone.html
+++ b/yaapp/apps/yaweb/templates/yaweb/contest_station_iphone.html
@@ -3,10 +3,11 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta http-equiv="Content-Style-Type" content="text/css">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="viewport" content="width=device-width,user-scalable=no" />
 <title>Concours Yasound</title>
 </head>
 <body>
-<a href='{% url contest_station_terms %}'><img src='/media/yaweb/images/station/iphone_concours.png' alt="Concours pour gagner une station d'accueil"/></a>
+<a href='{% url contest_station_terms %}'>
+<img src='/media/yaweb/images/station/iphone_concours.png' alt="Concours pour gagner une station d'accueil"/ width='640px' height='960px'></a>
 </body>
 </html>
