--- a/yaapp/apps/yaweb/templates/yaweb/contest_station_iphone.html
+++ b/yaapp/apps/yaweb/templates/yaweb/contest_station_iphone.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta http-equiv="Content-Style-Type" content="text/css">
-<meta name="viewport" content="width=device-width,user-scalable=no" />
+<meta name="viewport" content="user-scalable=no, width=320, initial-scale=1.0, maximum-scale=1.0"/>
 <title>Concours Yasound</title>
 </head>
 <body>
