contest: added saotw blog

--- a/yaapp/apps/yaweb/templates/yaweb/contest_station_terms.html
+++ b/yaapp/apps/yaweb/templates/yaweb/contest_station_terms.html
@@ -44,6 +44,7 @@
     <li><a href='http://www.iphonophile.fr/concours-gagner-une-station-daccueil-iphone-ipod-avec-yasound/' target='_blank'>iPhonophile</a></li>
     <li><a href='http://www.applepub.fr/blog/concours-jouez-et-gagnez-une-station-daccueil-avec-applepub-fr' target='_blank'>ApplePub</a></li>
     <li><a href='http://infoidevice.fr/concours-gagnez-une-station-daccueil-pour-iphone-et-ipod-avec-yasound/' target='_blank'>Info iDevice</a></li>
+    <li><a href='http://saotw.fr/?p=1836' target='_blank'>SAOTW</a></li>
 
     </ul> 
     
