--- a/yaapp/apps/yaweb/templates/yaweb/contest_station_iphone.html
+++ b/yaapp/apps/yaweb/templates/yaweb/contest_station_iphone.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta http-equiv="Content-Style-Type" content="text/css">
-<meta name="viewport" content="user-scalable=no,width=device-width"/>
+<meta name="viewport" content="user-scalable=no,width=device-width,initial-scale=0.5,maximum-scale=0.5"/>
 <title>Concours Yasound</title>
 </head>
 <body>
