added bootstrap reset css which seems to fix the problem

--- a/yaapp/apps/yaweb/templates/yaweb/contest_station_iphone.html
+++ b/yaapp/apps/yaweb/templates/yaweb/contest_station_iphone.html
@@ -3,11 +3,13 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta http-equiv="Content-Style-Type" content="text/css">
-<meta name="viewport" content="user-scalable=no,width=device-width,initial-scale=0.5,maximum-scale=0.5"/>
+<meta name="viewport" content="user-scalable=no,width=device-width"/>
+<link rel="stylesheet" href="/media/bootstrap/css/bootstrap.min.css"/>
 <title>Concours Yasound</title>
+
 </head>
 <body>
 <a href='{% url contest_station_terms %}'>
-<img style='width:640px;height:960px;' src='/media/yaweb/images/station/iphone_concours.png' alt="Concours pour gagner une station d'accueil"/ width='640px' height='960px'></a>
+<img src='/media/yaweb/images/station/iphone_concours.png' alt="Concours pour gagner une station d'accueil" /></a>
 </body>
 </html>
