added iPhone friendly contest page

--- a/yaapp/apps/yaweb/templates/yaweb/contest_station_terms.html
+++ b/yaapp/apps/yaweb/templates/yaweb/contest_station_terms.html
@@ -8,6 +8,7 @@
 <script type="text/javascript" src="/media/yaweb/js/unlightbox.js"></script>
 <link href="/media/yaweb/css/elecsounds.css" rel="stylesheet" type="text/css" />
 <link rel="stylesheet" href="/media/bootstrap/css/bootstrap.min.css"/>
+<link rel="stylesheet" href="/media/bootstrap/css/bootstrap-responsive.min.css"/>
 <link rel="stylesheet" href="/media/css/style.css"/>
 <title>Concours Yasound</title>
 </head>
@@ -33,7 +34,7 @@
     
     <div class='row-fluid'>
     
-    <div class='well es-right'>
+    <div class='well es-right hidden-phone'>
     Si vous avez un blog  et si vous souhaitez participer l’opération merci d’écrire à  <a href='mailto:astrid@yasound.com'>astrid@yasound.com</a>
     </div>
     
@@ -48,11 +49,15 @@
 
     </ul> 
     
+    <div class='well visible-phone'>
+    Si vous avez un blog  et si vous souhaitez participer l’opération merci d’écrire à  <a href='mailto:astrid@yasound.com'>astrid@yasound.com</a>
+    </div>
+    
     </div>
         
     <div class='row-fluid'>
     <h2>2. Ecoutez la radio «NiNi$$ »* et poster ce message sur le mur de la radio :</h2>
-    <div class='es-right well'>
+    <div class='es-right well hidden-phone'>
         <p>* Radio présente dans la catégorie « Sélection » de l’application</p>
         <p>** Remplacer "nom du blog" par le blog que vous avez choisi</p>
     </div>
@@ -61,13 +66,20 @@
 </p>
 
     </div>    
+    <div class='well visible-phone'>
+        <p>* Radio présente dans la catégorie « Sélection » de l’application</p>
+        <p>** Remplacer "nom du blog" par le blog que vous avez choisi</p>
+    </div>
 
     <div class='row-fluid'>
     
-    <div class='es-right well'>
+    <div class='es-right well hidden-phone'>
         <p><a href='/media/documents/reglement-fete-musique.pdf'>Télécharger le règlement du jeu (pdf)</a></p>
     </div>
 
+    <div class='well visible-phone'>
+        <p><a href='/media/documents/reglement-fete-musique.pdf'>Télécharger le règlement du jeu (pdf)</a></p>
+    </div>
 
     
     </div>
