--- a/yaapp/apps/yaweb/templates/yaweb/contest_station_iphone.html
+++ b/yaapp/apps/yaweb/templates/yaweb/contest_station_iphone.html
@@ -9,7 +9,13 @@
 
 </head>
 <body>
-<a href='{% url contest_station_terms %}'>
-<img src='/media/yaweb/images/station/iphone_concours.png' alt="Concours pour gagner une station d'accueil" /></a>
+<img src='/media/yaweb/images/station/iphone_concours.png' alt="Concours pour gagner une station d'accueil"  usemap="#Map"/>
+<map name="Map" id="Map">
+  <area shape="rect" coords="13,110,302,139" href="{% url contest_station_terms %}" target="_blank" alt="Jeu" />
+  <area shape="rect" coords="36,180,278,206" href="http://dueze.blogspot.ca/2012/06/webjouez-avec-yasound-et-remportez-une_14.html#links" target="_blank" alt="Dueze" />
+  <area shape="rect" coords="36,222,278,248" href="http://www.applepub.fr/blog/concours-jouez-et-gagnez-une-station-daccueil-avec-applepub-fr" target="_blank" alt="Apple Pub" />
+  <area shape="rect" coords="36,263,278,290" href="http://www.iphonophile.fr/concours-gagner-une-station-daccueil-iphone-ipod-avec-yasound/" target="_blank" alt="iPhonophile" />
+  <area shape="rect" coords="36,303,278,331" href="http://infoidevice.fr/concours-gagnez-une-station-daccueil-pour-iphone-et-ipod-avec-yasound/" target="_blank" alt="info iDevice" />
+</map>
 </body>
 </html>
