added "available on appstore"

--- a/yaapp/apps/yaweb/templates/yaweb/base.html
+++ b/yaapp/apps/yaweb/templates/yaweb/base.html
@@ -120,7 +120,9 @@ window.addEvent('domready', function() {
         {% endifequal %} 
        <br />
       <span style="font-size: 18px; font-weight:bold">yasound </span><span style="font-size: 10px">{% trans "© 2011 - All rights reserved" %}</span></div>
-    <div id="app"><img src="/media/yaweb/images/app.png" width="264" height="45" alt="Bientôt sur AppStore et Android Market" /></div>
+    <div id="app">
+        <a href="http://itunes.apple.com/us/app/yasound/id492680161?ls=1&mt=8"><img src="/media/yaweb/images/intro/appstore_now.png" width="167" height="58"/></a>
+    </div>
   </div>
 </div>
 </body>
