--- a/yaapp/apps/yaweb/templates/yaweb/index.html
+++ b/yaapp/apps/yaweb/templates/yaweb/index.html
@@ -27,7 +27,6 @@ content="Avec Yasound, créez votre radio en un instant, écoutez la musique ave
 </script>
 <script type="text/javascript" src="/media/js/fancybox/jquery.fancybox-1.3.4.pack.js"></script>
 <link rel="stylesheet" href="/media/js/fancybox/jquery.fancybox-1.3.4.css" type="text/css" media="screen" />
-<script type="text/javascript" src="/media/yaweb/js/concours.js"></script>
 
 <script type="text/javascript">
 // GOOGLE ANALYTICS
@@ -301,7 +300,7 @@ de styles et de nouveaux talents</td>
 <div id="puce3" class="puce" onclick="goToSlide(3)"></div>
 <div id="puce4" class="puce" onclick="goToSlide(4)"></div>
 </div>
-<div id="menu"><a href="/?flavour=mobile">Mobile</a> | <a href="{% url contest_station %}" class="boxed iframe">Concours</a> | <a href="{% url about %}">À propos de nous</a> | <a href="{% url jobs %}">Jobs</a> | <a href="{% url press %}">Presse</a> | <a href="{% url contact %}">Contact</a></div>
+<div id="menu"><a href="/?flavour=mobile">Mobile</a> | <a href="{% url about %}">À propos de nous</a> | <a href="{% url jobs %}">Jobs</a> | <a href="{% url press %}">Presse</a> | <a href="{% url contact %}">Contact</a></div>
 
 
 </div>
