added similar radios view on webapp

--- a/yaapp/templates/yabase/app/radio/radioPage.mustache
+++ b/yaapp/templates/yabase/app/radio/radioPage.mustache
@@ -1,7 +1,12 @@
+{% load i18n %}
 <div class='span4'>
     <div id='webapp-radio'></div>
     <div class='well'>
     <ul id='webapp-radio-users' class='thumbnails'></ul>
+    </div>
+    <div class='well'>
+    <h2>{% trans "Similar radios" %}</h2>
+    <ul id='webapp-similar-radios' class='thumbnails'></ul>
     </div>
 </div>
 <div class='span8'>
