twitter automatic share wip
* added preferences in field
* added handlers and default celery tasks
* added twitter share settings on webapp

--- a/yaapp/templates/yabase/app/settings/settingsPage.mustache
+++ b/yaapp/templates/yabase/app/settings/settingsPage.mustache
@@ -39,6 +39,7 @@
             {{ settings_twitter_form }}
             <div class="form-actions">
                 <input type='hidden' name='action' value='settings_twitter'/>
+                <button type="submit" name='save' class="btn btn-primary">{% trans "Save" %}</button>
                 <button type="submit" name='remove' id='btn-remove-twitter' class="btn btn-danger">{% trans "Remove account" %}</button>
             </div>
         </form>
